<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/labMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

	<Button
		android:id="@+id/btnGrouping"
		android:text="@string/btnGrouping"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/btnPhoto"
		android:text="@string/btnPhoto"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<Button
		android:id="@+id/btnPhotoTogether"
		android:text="@string/btnPhotoTogether"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/btnSingingTogether"
		android:text="@string/btnSingingTogether"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
</LinearLayout>